490 JVM - 05 knowledge about gc